tests/baselines/reference/symbolProperty56.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty56.ts(9,9): error TS2538: Type 'any' cannot be used as an index type.
tests/cases/conformance/es6/Symbols/symbolProperty56.ts(9,16): error TS2339: Property 'iterator' does not exist on type '{}'.


==== tests/cases/conformance/es6/Symbols/symbolProperty56.ts (2 errors) ====
    var obj = {
        [Symbol.iterator]: 0
    };
    
    module M {
        var Symbol: {};
        // The following should be of type 'any'. This is because even though obj has a property keyed by Symbol.iterator,
        // the key passed in here is the *wrong* Symbol.iterator. It is not the iterator property of the global Symbol.
        obj[Symbol["iterator"]];
            ~~~~~~~~~~~~~~~~~~
!!! error TS2538: Type 'any' cannot be used as an index type.
                   ~~~~~~~~~~
!!! error TS2339: Property 'iterator' does not exist on type '{}'.
    }